# sdfSphereMarcher

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
examples/weights/: arm.h5  arm.json  armadillo.h5  armadillo.json  bumpy-cube.h5  bumpy-cube.json  camel.h5  camel.json  cheburashka.h5  cheburashka.json  cow.h5  cow.json  cube.h5  cube.json  horse.h5  horse.json  sphere.h5  sphere.json
